--- a/ios/chatTests/Info.plist
+++ b/ios/chatTests/Info.plist
@@ -21,7 +21,8 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>UIAppFonts</key>
-  <array>
+ <key>UIAppFonts</key>
+<array>
   <string>AntDesign.ttf</string>
   <string>Entypo.ttf</string>
   <string>EvilIcons.ttf</string>
@@ -30,17 +31,15 @@
   <string>FontAwesome5_Brands.ttf</string>
   <string>FontAwesome5_Regular.ttf</string>
   <string>FontAwesome5_Solid.ttf</string>
-  <string>FontAwesome6_Brands.ttf</string>
-  <string>FontAwesome6_Regular.ttf</string>
-  <string>FontAwesome6_Solid.ttf</string>
+  <string>Fontisto.ttf</string>
   <string>Foundation.ttf</string>
   <string>Ionicons.ttf</string>
-  <string>MaterialIcons.ttf</string>
   <string>MaterialCommunityIcons.ttf</string>
-  <string>SimpleLineIcons.ttf</string>
+  <string>MaterialIcons.ttf</string>
   <string>Octicons.ttf</string>
+  <string>SimpleLineIcons.ttf</string>
   <string>Zocial.ttf</string>
-  <string>Fontisto.ttf</string>
-  </array>
+</array>
+
 </dict>
 </plist>
